<resources>
    <string name="app_name">Garbage Collector</string>

    <string name="add">Add</string>
    <string name="add_garbage">Add garbage</string>
    <string name="add_category">Add category</string>
    <string name="name">Name</string>
    <string name="category">Category</string>

    <string name="garbage_category_list_row">(%1$s)</string>
    <string name="garbage_can_list_row">(%1$s)</string>
    <string name="new_garbage">New garbage</string>
    <string name="change_category">Change category</string>
    <string name="new_garbage_category">New garbage category</string>
    <string name="trash_can">Trash can</string>

    <string name="garbage_details">
        The garbage \"%1$s\" belongs to the \"%2$s\" category.\n\nIt must be thrown inside \"%3$s\".
    </string>
</resources>
