<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".garbages.activities.AddGarbageActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_garbage_category"
        android:id="@+id/newGarbageCategoryTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/newGarbageCategoryTextView"
        android:id="@+id/newGarbageCategoryGridGap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newGarbageCategoryGridGap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/nameTextView"
            android:layout_row="0"
            android:layout_column="0" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="left|right"
            android:inputType="text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/trash_can"
            android:id="@+id/trashCanTextView"
            android:layout_row="2"
            android:layout_column="0" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trashCanEditText"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="left|right"
            android:inputType="text" />

    </GridLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:id="@+id/space"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:id="@+id/addGarbageCategoryButton"
        android:layout_below="@+id/space"
        android:layout_alignRight="@+id/space"
        android:layout_alignEnd="@+id/space" />


</RelativeLayout>
